umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_ketcher_structure-with-stereo-bonds-5.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 58
bond_count: 61
sum_formula: C44N8O6
graph6: y???????K?_??G??_?G?@??C?AG?????C??@???G???_??????@????_???G???@???A@_????????G????_OG?????????E????_?_????????@??????_?????G?????@?????@C????????????_???????C?????????????????????@???????A?????_@??@???G??????a??????CO????A???A??@??O????A??G???A??O????????E??????O?C??????_?A??
