umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_marvin_dobutamine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 45
bond_count: 46
sum_formula: C18H23NO3
graph6: l?CGG_G?OC?A?A?A??_?G??_?@C?@A??W??OG??gO???_??@????_???O???_????O???@????@????@?????_????C?????_?????O?????O?????G?????A??????O?????@???????_??C??????A???????_??????
