umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_marvin_molgen.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 22
sum_formula: C14O9
graph6: VsD?GC@?O?_A?A??_?O?@??C??O?@???O??@???O???_
